# Labuta

./: .gitmodules  2  3  README.md  ]  com.gitlab.idevecore.Pomodoro.json  io.github.idevecore.LabutaDevel.json  io.gitlab.idevecore.PlanytimerDevel.json  io.gitlab.idevecore.Pomodoro.json  io.gitlab.idevecore.PomodoroDevel.json  labuta.doap  meson.build  planytimer.doap  pomodoro.doap
.flatpak-builder/ccache/0/: stats
.flatpak-builder/ccache/1/: stats
.flatpak-builder/ccache/2/: stats
.flatpak-builder/ccache/3/: stats
.flatpak-builder/ccache/4/: stats
.flatpak-builder/ccache/5/: stats
.flatpak-builder/ccache/6/: stats
.flatpak-builder/ccache/7/: stats
.flatpak-builder/ccache/8/: stats
.flatpak-builder/checksums/: x86_64-com.gitlab.idevecore.Pomodoro.json  x86_64-io.gitlab.idevecore.Pomodoro.json  x86_64-io.gitlab.idevecore.PomodoroDevel.json
data/: com.gitlab.idevecore.Pomodoro.appdata.xml.in  com.gitlab.idevecore.Pomodoro.desktop.in  com.gitlab.idevecore.Pomodoro.gschema.xml  io.github.idevecore.Labuta.appdata.xml.in.in  io.github.idevecore.Labuta.desktop.in.in  io.github.idevecore.Labuta.gschema.xml  io.gitlab.idevecore.Planytimer.appdata.xml.in.in  io.gitlab.idevecore.Planytimer.desktop.in.in  io.gitlab.idevecore.Planytimer.gschema.xml  io.gitlab.idevecore.Pomodoro.appdata.xml.in  io.gitlab.idevecore.Pomodoro.appdata.xml.in.in  io.gitlab.idevecore.Pomodoro.desktop.in  io.gitlab.idevecore.Pomodoro.desktop.in.in  io.gitlab.idevecore.Pomodoro.gschema.xml  meson.build
data/icons/: meson.build
patches/: README.md
po/: POTFILES  io.gitlab.idevecore.Pomodoro.po  io.gitlab.idevecore.Pomodoro.pot  pt_BR.po
src/: Timer.js  about.js  actions.js  application-db-manager.js  application.js  application_data.js  com.gitlab.idevecore.Pomodoro.data.gresource.xml  com.gitlab.idevecore.Pomodoro.src.gresource.xml  db.js  gsettings.js  historic.js  historic_row.js  history.js  history_row.js  io.github.idevecore.Labuta  io.gitlab.idevecore.Planytimer  io.gitlab.idevecore.Pomodoro  io.gitlab.idevecore.Pomodoro.data.gresource.xml  io.gitlab.idevecore.Pomodoro.src.gresource.xml  main.js  meson.build  pomodoro-item.js  preferences.js  settings.js  shortcuts.js  statistics.js  stores.js  style.css  timer.js  timers.js  utils.js  window.blp  window.js  window.ui
src/assets/: style.css
src/assets/icons/: meson.build
src/components/alarm-preferences/: alarm-preferences.blp  alarm-preferences.js
src/components/display-timer/: display-timer.blp  display-timer.js  index.blp  main.js
src/components/history/: history.blp  history.js  index.blp  main.js
src/components/history-details/: history-details.blp  history-details.js  index.blp  main.js
src/components/history-row/: history-row.blp  history-row.js
src/components/preferences/: index.blp  main.js  preferences.blp  preferences.js
src/components/shortcuts/: index.blp  main.js  shortcuts.blp  shortcuts.js
src/components/small-window/: main.js  small-window.blp  small-window.js
src/components/sound-preferences/: index.blp  main.js  sound-preferences.blp  sound-preferences.js
src/components/start-timer/: index.blp  main.js
src/components/theme-selector/: theme-selector.blp  theme-selector.js
src/components/timer-controls/: index.blp  main.js  timer-controls.blp  timer-controls.js
src/components/timer-controls/start_pause_button/: index.blp  main.js
src/icons/: meson.build
src/pages/history/: history.blp  history.js
src/pages/preferences/: preferences.blp  preferences.js
src/pages/shortcuts/: shortcuts.blp  shortcuts.js
src/pages/statistics/: index.blp  main.js  statistics.blp  statistics.js
src/pages/timer/: index.blp  main.js  timer.blp  timer.js
src/ui/: historic.ui  historic_row.ui  history.ui  history_row.ui  preferences.blp  preferences.ui  shortcuts.blp  statistics.ui  timer.blp  timer.ui  window.blp
src/windows/small-window/: index.blp
src/windows/window/: window.js
(+1169 files in other folders)
