install_data(
  [
    'background-app-ghost-symbolic.svg',
    'dark-mode-symbolic.svg',
    'history-undo-symbolic.svg',
    'hourglass-symbolic.svg',
    'profit-symbolic.svg',
    'sound-wave-symbolic.svg',
    'user-trash-symbolic.svg',
    'user-trash-full-symbolic.svg',
    'check-round-outline-whole-symbolic.svg',
    'pip-in-symbolic.svg',
    'pip-out-symbolic.svg',
    'left-symbolic.svg',
    'system-restart-symbolic.svg',
    'settings-symbolic.svg',
    'month-symbolic.svg',
    'permissions-notifications-symbolic.svg',
    'question-round-symbolic.svg',
    'arrow-pointing-at-line-down-symbolic.svg',
    'arrow-pointing-away-from-line-up-symbolic.svg',
    'vertical-arrows-long-symbolic.svg',
  ],
  install_dir: datadir / 'icons/hicolor/scalable/status',
)
